--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body  onload="newQuote()">
     <div>
-        <h1>Cosmere Quote</h1>
+        <h3>Cosmere Quote</h1>
         <p id="quoteDisplay"></p>
+        <p id="authorDisplay"></p>
+        <p id="bookDisplay"></p>
     </div>
 
 
